--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -237,7 +237,7 @@ html {
   left: 0;
   position: absolute;
   width: 100%;
-  z-index: 0;
+  z-index: 2;
 }
 .board__image {
   position: relative;
@@ -285,23 +285,15 @@ html {
   background-color: #d9bea3;
   border: 4px solid var(--color-border);
   border-radius: 21px;
+  bottom: 50%;
   font-family: 'Raleway';
   left: 1rem;
   max-width: 290px;
   position: absolute;
-  top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(0, 50%);
   width: calc(100% - 71px);
-  z-index: 2;
+  z-index: 1;
 }
-
-.info-box--out-to-left {
-  animation: outToLeft .5s;
-}
-.info-box--out-to-right {
-  animation: outToRight .5s;
-}
-
 .info-box::before {
   background-color: #fff2e5;
   border-radius: 21px;
@@ -320,35 +312,10 @@ html {
   flex-flow: column;
   font-size: 14px;
   line-height: 1.4rem;
-  padding: 1rem 2rem;
+  padding: 1rem;
   position: relative;
   width: 100%;
   z-index: 1;
-}
-.info-box__arrow {
-  border-top: 3px solid #ff9500;
-  cursor: pointer;
-  display: block;
-  height: 20px;
-  outline: none;
-  overflow: hidden;
-  position: absolute;
-  text-indent: -5000px;
-  transform: translate(0, -50%);
-  top: 50%;
-  width: 20px;
-}
-.info-box__arrow-left {
-  border-left: 3px solid #ff9500;
-  border-top-left-radius: 6px;
-  left: 11px;
-  transform: rotate(-45deg);
-}
-.info-box__arrow-right {
-  border-right: 3px solid #ff9500;
-  border-top-right-radius: 6px;
-  right: 11px;
-  transform: rotate(45deg);
 }
 .info-box__title {
   color: #663d14;
@@ -488,7 +455,9 @@ html {
     --diff: 4.5%;
   }
   .info-box {
-    left: 247px;
+    bottom: auto;
+    left: 67px;
+    /* top: 0; */
     width: 420px;
   }
   /* .info-box--mountain-1 {
@@ -549,27 +518,6 @@ html {
   }
   100% {
     transform: translate(0, 0);
-  }
-}
-
-@keyframes outToLeft {
-  0% {
-    opacity: 1;
-    transform: translateX(0, -50%);
-  }
-  100% {
-    opacity: 0;
-    transform: translateX(-50%, -50%);
-  }
-}
-@keyframes outToRight {
-  0% {
-    opacity: 1;
-    transform: translate(0, -50%);
-  }
-  100% {
-    opacity: 0;
-    transform: translate(50%, -50%);
   }
 }
 
