Criando segunda versão do site, index2.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,8 @@ html {
   border-radius: 21px;
   color: #fff;
   cursor: pointer;
-  display: inline-block;
+  display: flex;
+  flex: 0 0 auto;
   font-family: 'Raleway';
   font-weight: 700;
   line-height: 1;
