--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -242,6 +242,10 @@ a.menu-bar__link {
 .section--contact {
   background-color: #0a1f33;
 }
+/* .section--contact {
+  overflow: hidden;
+  overflow-y: scroll;
+} */
 .section__content {
   display: flex;
   flex-flow: column;
@@ -473,4 +477,21 @@ a.menu-bar__link {
 .js-draw {
   position: relative;
   z-index: 1;
+}
+
+.form-control-label {
+  color: #fff;
+  display: none;
+  font-size: 12px;
+  font-family: 'Raleway';
+  margin-bottom: .34rem;
+}
+.form-group {
+  margin-bottom: .5rem;
+}
+
+.form-group .error {
+  color: rgb(255, 126, 126);
+  font-size: 10px;
+  margin-bottom: 0;
 }
