--- a/assets/css/styles2.css
+++ b/assets/css/styles2.css
@@ -707,6 +707,9 @@ a.menu-bar__link {
   a.menu-bar__link {
     font-size: 1rem;
   }
+  .board--space .board__image {
+    max-width: 90%;
+  }
   .info-box--space-1 {
     bottom: 80%;
   }
