--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,118 +1,109 @@
-* {
-  box-sizing: border-box;
-}
-
 html {
-  font-family: 'Nunito', sans-serif;
+  --bg-light-base: #d9bea3;
+  --bg-light-fill: #fff2e5;
   --color-border: #331f0a;
-}
-
-.logo {
-  background: transparent url("../img/treinafacil.svg") no-repeat 50% 50%/100%;
-  display: block;
-  height: 60px;
-  overflow: hidden;
-  outline: none;
-  margin: 0 auto;
-  padding: 0;
-  text-indent: -5000px;
-  width: 200px;
-}
-
-.logo--alter {
-  background-image: url("../img/treina-facil.svg");
-}
-
-.intro {
-  font-weight: 300;
-  font-size: 1.5rem;
-  max-width: 90%;
-  /* text-align: ; */
-}
-
-.btn-game {
-  background-color: gray;
-  border: 2px solid var(--color-border);
-  border-radius: 21px;
-  color: #fff;
-  cursor: pointer;
+  --color-border-light: #9c5f1e;
   display: flex;
-  flex: 0 0 auto;
-  font-family: 'Raleway';
-  font-weight: 700;
-  line-height: 1;
-  padding: 12px;
-  position: relative;
-  text-align: center;
-  text-transform: uppercase;
-  min-width: 120px;
+  flex-flow: column;
+  font-family: 'Nunito', sans-serif;
+  height: 100%;
+  width: 100%;
 }
-.btn-game::before {
-  background-color: darkgray;
-  border-radius: 21px;
-  content: '';
-  left: 1px;
-  height: calc(100% - 4px);
-  position: absolute;
+
+body {
+  background: transparent url("../img/bg-montanha.jpg") no-repeat 0 0/cover;
+  height: 100%;
+  width: 100%;
+}
+
+.wrapper {
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
+}
+
+.menu-bar {
+  background-color: var(--bg-light-base);
+  border: 4px solid var(--color-border);
+  border-top: none;
+  border-radius: 0 0 21px 21px;
+  display: flex;
+  flex-flow: column;
+  flex: 0 1 auto;
+  left: 50%;
+  margin: 0 auto;
+  padding-bottom: 4px;
+  position: fixed;
   top: 0;
-  transition: all .2s;
-  z-index: 0;
-  width: calc(100% - 2px);
-}
-.btn-game:hover::before {
-  background-color: #666;
-}
-.btn-game__text {
-  position: relative;
+  transform: translate(-50%, 0);
+  transition: all 1s;
+  width: calc(100% - 2rem);
   z-index: 1;
 }
 
-.btn-game--primary {
-  background-color: #da7f00;
-}
-.btn-game--primary::before {
-  background-color: #ff9500;
-}
-.btn-game--primary:hover:not([disabled])::before {
-  background-color: #e78700
+.menu-bar__links {
+  display: none;
+  flex-flow: row;
+  justify-content: space-between;
+  padding: 1rem 1rem 0;
+  width: 100%;
 }
 
-.btn-game--contrast {
-  background-color: #ddd;
-  border: none;
+.menu-bar__links--active {
+  display: flex;
+}
+
+a.menu-bar__link {
+  color: #331f0a;
+  font-family: 'Raleway';
+  font-size: 12px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+a.menu-bar__link:hover,
+a.menu-bar__link.--active {
   color: #ff9500;
-  text-transform: none;
-}
-.btn-game--contrast::before {
-  background-color: #fff;
-}
-.btn-game--contrast:hover {
-  box-shadow: 0 -2px 0 rgba(0, 0, 0, .15);
-}
-.btn-game--contrast:hover:not([disabled])::before {
-  background-color: #f0f0f0;
 }
 
+.menu-bar__content {
+  align-items: center;
+  background-color: var(--bg-light-fill);
+  border-radius: 0 0 21px 21px;
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  height: 100%;
+  padding-bottom: calc(1rem - 4px);
+}
 
-.btn-game--danger {
-  background-color: #d4392e;
-}
-.btn-game--danger::before {
-  background-color: #ff4337;
-}
-.btn-game--danger:hover::before {
-  background-color: #d4392e;
+.logo {
+  align-self: center;
+  background: transparent url("../img/treinafacil.svg") no-repeat 50% 50%/100%;
+  display: flex;
+  height: 30px;
+  overflow: hidden;
+  outline: none;
+  margin: .5rem auto;
+  padding: 0;
+  text-indent: -5000px;
+  width: 57%;
 }
 
+.logo--dark {
+  background-image: url("../img/treina-facil.svg");
+}
+
+/** Barra de progresso **/
 .status-bar {
   align-items: center;
   display: flex;
+  flex: 0 1 auto;
   height: 23px;
-  left: 1rem;
-  max-width: 90%;
-  padding-left: 15px;
-  position: fixed;
-  top: 1rem;
+  justify-self: flex-start;
+  max-width: calc(100% - 73px);
+  margin-left: 16px;
+  padding-left: 16px;
+  position: relative;
   width: 450px;
   z-index: 10;
 }
@@ -156,7 +147,7 @@ html {
   background-color: #fff;
   color: #143d66;
   display: inline-flex;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 700;
   height: 29px;
   justify-content: center;
@@ -178,22 +169,80 @@ html {
   width: 9px;
   z-index: 1;
 }
+/** end Barra de progresso **/
+
+.btn-menu,
+.btn-close-menu {
+  align-items: center;
+  display: flex;
+  flex: 0 1 auto;
+  height: 40px;
+  margin-left: auto;
+  justify-content: center;
+  position: relative;
+  outline: none;
+  overflow: hidden;
+  text-indent: -5000px;
+  width: 40px;
+}
+.btn-menu {
+  margin-right: 8px;
+}
+.btn-menu::after {
+  background: repeating-linear-gradient(
+    180deg,
+    transparent,
+    transparent 3px,
+    var(--color-border) 3px,
+    var(--color-border)  6px
+  );
+  display: block;
+  content: "";
+  height: 18px;
+  width: 18px;
+}
+.btn-menu--active::after {
+  background: repeating-linear-gradient(
+    180deg,
+    transparent,
+    transparent 3px,
+    var(--color-border-light) 3px,
+    var(--color-border-light)  6px
+  );
+}
+
+.btn-close-menu::after,
+.btn-close-menu::before {
+  background-color: var(--color-border);
+  content: "";
+  display: flex;
+  flex: 0 1 auto;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: 10px;
+  width: 3px;
+}
+.btn-close-menu::after {
+  transform: rotate(45deg);
+}
+.btn-close-menu::before {
+  transform: rotate(-45deg);
+}
 
 .section {
-  --animation-time: .75s;
-  align-items: center;
-  background-color: #fff;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-  height: 100%;
-  position: fixed;
-  transform: translate(0, -100%);
-  top: 0;
-  width: 100%;
+  background-color: rgba(255, 149, 0, .9);
+  position: relative;
+  z-index: 0;
 }
-.section--main {
-  transform: translate(0, 0);
+.section--intro .logo {
+  display: none;
+}
+.section--mountain {
+  background: #5fc1ff url("../img/bg-montanha.jpg") no-repeat 50% 50%/cover;
+}
+.section--space {
+  background: #243378 url("../img/bg-espaco.jpg") no-repeat 56% 50%/cover;
 }
 
 .section__content {
@@ -201,49 +250,111 @@ html {
   flex-flow: column;
   flex: 1 1 auto;
   height: 100%;
-  padding: 1rem;
+  justify-content: space-between;
+  padding: 106px 1rem 1rem;
   position: relative;
   width: 100%;
 }
 
-.section__col {
-  display: flex;
-  width: 100%;
-}
-
-.section--main {
-  align-items: center;
-  background-color: #ff9500;
+.intro {
   color: #fff;
-  justify-content: center;
-  z-index: 1;
-}
-
-.section--main .section__content {
-  flex: 1 1 auto;
-  height: auto;
-  padding-top: 60px;
-  justify-content: space-between;
-  width: auto;
-}
-
-.section.--active {
-  z-index: 6;
-}
-
-.section--mountain {
-  background: #5fc1ff url("../img/bg-montanha.jpg") no-repeat 50% 50%/cover;
-}
-.section--mountain .section__content,
-.section--space .section__content {
-  padding: 0;
-}
-.section--space {
-  background: #243378 url("../img/bg-espaco.jpg") no-repeat 56% 50%/cover;
+  font-weight: 300;
+  font-size: 1.5rem;
+  margin: 0 auto;
+  text-align: center;
+  max-width: 90%;
 }
 
 .section--contact {
-  background-color: #162640;
+  background-color: #0a1f33;
+}
+.section--contact .section__content {
+  padding-bottom: 0;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.section--contact .section__content {
+  justify-content: flex-start;
+}
+.section--contact .intro {
+  font-size: .875rem;
+  margin-bottom: 0;
+}
+
+.btn-game {
+  background-color: gray;
+  border: 2px solid var(--color-border);
+  border-radius: 21px;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  flex: 0 0 auto;
+  font-family: 'Raleway';
+  font-weight: 700;
+  line-height: 1;
+  justify-content: center;
+  /* padding: 12px; */
+  padding: 6px 6px 8px;
+  position: relative;
+  text-align: center;
+  text-transform: uppercase;
+  /* min-width: 120px; */
+}
+.btn-game:hover {
+  color: #fff;
+  text-decoration: none;
+}
+.btn-game::before {
+  background-color: darkgray;
+  border-radius: 21px;
+  content: '';
+  left: 1px;
+  height: calc(100% - 4px);
+  position: absolute;
+  top: 0;
+  transition: all .2s;
+  z-index: 0;
+  width: calc(100% - 2px);
+}
+.btn-game:hover::before {
+  background-color: #666;
+}
+.btn-game__text {
+  position: relative;
+  z-index: 1;
+}
+
+.btn-game--primary {
+  background-color: #da7f00;
+}
+.btn-game--primary::before {
+  background-color: #ff9500;
+}
+.btn-game--primary:hover:not([disabled])::before {
+  background-color: #e78700;
+  color: #fff;
+}
+
+.btn-game--contrast {
+  /* background-color: #2e8fe6; */
+  background-color: #007be8;
+  border: none;
+  color: #fff;
+  text-transform: none;
+}
+.btn-game--contrast::before {
+  /* background-color: #48b4e0; */
+  background-color: #009ede;
+}
+.btn-game--contrast:hover {
+  box-shadow: 0 -2px 0 rgba(0, 0, 0, .15);
+  color: #fff;
+  cursor: pointer;
+}
+.btn-game--contrast:hover:not([disabled])::before {
+  /* background-color: #42a6ce; */
+  background-color: #01a4e4;
 }
 
 .board {
@@ -341,14 +452,14 @@ html {
   background-color: #d9bea3;
   border: 4px solid var(--color-border);
   border-radius: 21px;
-  bottom: 50%;
+  bottom: 60%;
   font-family: 'Raleway';
   left: 1rem;
   max-width: 290px;
   position: absolute;
   transform: translate(0, 50%);
-  width: calc(100% - 71px);
-  z-index: 1;
+  width: 100%;
+  z-index: 2;
 }
 .info-box::before {
   background-color: #fff2e5;
@@ -366,7 +477,7 @@ html {
   display: flex;
   height: 100%;
   flex-flow: column;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.4rem;
   padding: 1rem;
   position: relative;
@@ -376,10 +487,19 @@ html {
 .info-box__title {
   color: #663d14;
   flex: 1 1 auto;
-  font-size: 1.125rem;
+  font-size: 1rem;
   font-weight: 700;
-  margin-bottom: 0;
+  margin-bottom: .5rem;
   margin-top: 0;
+}
+.info-box__text {
+  margin-bottom: 0;
+}
+.info-box__navigation {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  margin-top: 1rem;
 }
 
 .js-draw {
@@ -387,90 +507,215 @@ html {
   z-index: 1;
 }
 
-
-.mv--enter-from-bottom {
-  animation: enterFromBottom var(--animation-time) cubic-bezier(0.645, 0.045, 0.355, 1);
-  transform: translate(0, 0);
-}
-.mv--exit-to-bottom {
-  animation: exitToBottom var(--animation-time) cubic-bezier(0.19, 1, 0.22, 1);
-  transform: translate(0, 100%);
-}
-.mv--enter-from-top {
-  animation: enterFromTop var(--animation-time) cubic-bezier(0.19, 1, 0.22, 1);
-  transform: translate(0, 0);
-}
-.mv--exit-to-top {
-  animation: exitToTop var(--animation-time) cubic-bezier(0.645, 0.045, 0.355, 1);
-  transform: translate(0, -100%);
+.form {
+  margin-top: 1rem;
 }
 
-.navigation {
-  position: fixed;
-  right: 1rem;
-  transform: translate(0, -50%);
-  top: 50%;
-  z-index: 10;
-}
-
-.navigation__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navigation__item {
-  align-items: center;
-  background-color: #ff5a00;
-  border-radius: 50%;
+.form-control-label {
   color: #fff;
-  display: flex;
+  display: none;
+  font-size: 12px;
   font-family: 'Raleway';
-  flex-flow: row;
-  font-size: 14px;
-  height: 24px;
-  justify-content: center;
-  padding-bottom: 2px;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, .15);
-  transition: box-shadow 1s;
-  width: 24px;
+  margin-bottom: .34rem;
+}
+.form-group {
+  margin-bottom: .5rem;
 }
 
-.navigation__item:nth-child(1n+2) {
-  margin-top: 5px;
+.form-control.error {
+  border-color: #ff7e7e;
+  box-shadow: 0 0 1px 1px rgba(244, 126, 126) inset;
 }
 
-.navigation__item:hover,
-.navigation__item.--active {
-  cursor: pointer;
-  background-color: #df4f02;
+.form-group .error {
+  color: #ff7e7e;
+  font-size: 10px;
+  margin-bottom: 0;
 }
-.navigation__item.--active {
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, .15);
-}
-.navigation__link {
+
+.footer {
   align-items: center;
+  background-color: #000;
+  color: #666;
   display: flex;
-  height: 100%;
-  justify-content: center;
-  width: 100%;
+  flex-flow: column;
+  flex-direction: column-reverse;
+  font-size: 14px;
+  justify-content: space-around;
+  margin-top: auto;
+  text-align: center;
+  padding: .5rem 1rem;
+}
+
+@media(min-width: 544px) {
+  .logo {
+    width: 227px;
+    height: 44px;
+  }
+  .info-box {
+    bottom: 57%;
+  }
+  .info-box--mountain-2 {
+    left: 18%;
+  }
+  .info-box--mountain-3 {
+    left: 26%;
+  }
+  .info-box--mountain-4 {
+    left: 38%;
+  }
+  .info-box--space-2 {
+    bottom: 60%;
+    left: 18%;
+  }
+  .info-box--space-3 {
+    bottom: 55%;
+    left: 22%;
+  }
+  .info-box--space-4 {
+    bottom: 62%;
+    left: 28%;
+  }
+  .info-box--space-5 {
+    bottom: 58%;
+    left: 34%;
+  }
+  .info-box--space-6 {
+    bottom: 60%;
+    left: 40%;
+  }
+  .section--intro .section__content {
+    justify-content: space-around;
+    text-align: center;
+  }
+  .section--intro .intro {
+    max-width: 100%;
+  }
+  .form {
+    margin-top: 48px;
+  }
+  .form-control-label {
+    display: block;
+  }
+  .board__module--s1 {
+    right: calc(73% + var(--diff)/2);
+    bottom: calc(89% + var(--diff)/2);
+  }
+  .board__module--s2 {
+    right: calc(64% + var(--diff)/2);
+    bottom: calc(67% + var(--diff)/2);
+  }
 }
 
 @media (min-width: 768px) {
+  .logo {
+    height: 32px;
+    margin: 1rem;
+    order: 1;
+    width: 176px;
+  }
+  .section--intro .logo {
+    height: 50px;
+    order: 0;
+    display: flex;
+    width: 300px;
+  }
+  .btn-menu {
+    display: none;
+  }
+  .status-bar {
+    order: 3;
+    margin: 0 1rem 0 auto;
+    width: 50%;
+  }
+  .menu-bar__links {
+    display: flex;
+    flex: 0 0 auto;
+    margin: 0 1rem 0 auto;
+    padding: 0;
+    order: 2;
+    width: 50%;
+  }
+  .menu-bar__link + .menu-bar__link {
+    margin-left: 1rem;
+  }
   .board__module {
     --diff: 2%;
   }
-
   .info-box {
-    width: 320px;
+    z-index: 3;
+  }
+  .info-box--mountain-1 {
+    left: 27%;
+  }
+  .info-box--mountain-4 {
+    left: 30%;
+  }
+  .info-box--space-1 {
+    bottom: 67%;
+    left: 40%;
+  }
+  .info-box--space-2 {
+    bottom: 64%;
+    left: 45%;
+  }
+  .info-box--space-3 {
+    left: 41%;
+  }
+  .info-box--space-3 {
+    left: 36%;
+  }
+
+  .section--contact .section__content {
+    justify-content: space-between;
+  }
+  .section--contact .intro {
+    font-size: 26px;
+    margin-bottom: 20px;
+  }
+  .footer {
+    flex-flow: row;
+    flex-direction: row;
+    font-size: 1rem;
   }
 }
 
 @media (min-width: 992px) {
-
-  .status-bar { 
+  .logo {
+    animation: logoEnter .5s ease-in-out;
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    order: 2;
+  }
+  .btn-game--contrast {
+    align-self: center;
+    font-size: 24px;
+    min-width: 240px;
+  }
+  .menu-bar__content {
+    overflow: hidden;
+    padding: 11px 0;
+  }
+  .--show-logo .logo {
+    display: flex;
+  }
+  .--show-logo .menu-bar__content {
+    padding: 0;
+  }
+  .--show-logo .menu-bar__links {
+    margin-left: 0;
+  }
+  .menu-bar__links {
+    order: 3;
+    width: auto;
+  }
+  .status-bar {
     height: 42px;
+    margin: 0 0 0 1rem;
+    order: 1;
     padding-left: 35px;
+    width: 360px;
   }
   .status-bar__arrow {
     height: auto;
@@ -484,51 +729,74 @@ html {
   .status-bar__progress-bar-count {
     box-shadow: 3px -3px 0 2px #178fe6 inset, 0 6px 0 0px #99eeff inset;
   }
-
-  .logo {
-    height: 90px;
-    width: 300px;
+  a.menu-bar__link {
+    font-size: .875rem;
   }
-  .intro {
-    font-size: 2rem;
-    max-width: 768px;
-    text-align: center;
-  }
-  .section__content {
-    padding: 0;
-  }
-  .section--main .section__content {
-    flex: 0 1 auto;
-  }
-  .section--space {
-    background-position: 56% 50%;
-  }
-  .board--mountain {
-    background: transparent url("../img/board-montanha.png") no-repeat 100% 100%/100%;
-  }
-
   .board__module {
     --diff: 4.5%;
   }
-  .info-box {
-    bottom: auto;
-    left: 67px;
-    top: 11.5%;
-    width: 420px;
+  .form {
+    margin-top: 0;
   }
-  .info-box[class*="space"] {
-    bottom: 20%;
-    top: auto;
+  .footer {
+    display: flex;
   }
 }
 
 @media (min-width: 1200px) {
+  .section--intro .logo {
+    height: 63px;
+    width: 385px;
+  }
+  .section--intro .intro {
+    font-size: 28px;
+  }
   .board__module {
     --diff: 5.5%;
+  }
+  a.menu-bar__link {
+    font-size: 1rem;
+  }
+  .board--space .board__image {
+    max-width: 90%;
+  }
+  .info-box--space-1 {
+    bottom: 80%;
+  }
+  .info-box--space-2 {
+    bottom: 73%;
+  }
+  .info-box--space-3 {
+    bottom: 80%;
+    left: 42%;
+  }
+  .info-box--space-4 {
+    bottom: 73%;
+    left: 41%;
+  }
+  .info-box--space-5 {
+    bottom: 85%;
+  }
+  .info-box--space-6 {
+    left: 70%;
+    bottom: 73%;
+  } 
+  .board__module--s1 {
+    bottom: calc(63% + var(--diff)/2);
+  }
+  .board__module--s2 {
+    bottom: calc(51% + var(--diff)/2);
   }
 }
 
 @media (min-width: 1440px) {
+  .section--intro .logo {
+    height: 76px;
+    width: 480px;
+  }
+  .section--intro .intro {
+    font-size: 32px;
+  }
   .board__module {
     --diff: 6.5%;
   }
@@ -538,41 +806,25 @@ html {
       --diff: 8.5%;
   }
 }
-@keyframes exitToTop {
+
+@keyframes logoEnter {
   0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(0, -100%);
-  }
-}
-@keyframes exitToBottom {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(0, 100%);
-  }
-}
-@keyframes enterFromTop {
-  0% {
-    transform: translate(0, -100%);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
-@keyframes enterFromBottom {
-  0% {
-    transform: translate(0, 100%);
+    transform: translate(0, 200%);
   }
   100% {
     transform: translate(0, 0);
   }
 }
 
-/** Modifiers **/
-.--mx-auto {
-  margin-left: auto !important;
-  margin-right: auto !important;
+@keyframes loadingOut {
+  100% {
+    display: none;
+    opacity: 0;
+  }
+}
+
+/** modifiers **/
+.--emphasis {
+  font-weight: 700;
+  font-size: 1.25em;
 }
